--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-/* styles.css */
+* styles.css */
 nav {
     display: flex;
     justify-content: center; /* This centers the items along the main axis */
-    background-color: #555;
+    background-color: #FAF8E1;
     padding: 10px;
 }
 
@@ -14,11 +14,11 @@ nav a {
 body {
     font-family: sans-serif;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color: #DCD2FA;
 }
 
 header {
-    background-color: #333;
+    background-color: #B791C7;
     color: white;
     padding: 10px;
     text-align: center;
@@ -27,17 +27,4 @@ main {
     max-width: 800px;
     margin: 20px auto; /* Centers the main content block */
     padding: 20px;
-}
-
-section {
-    background-color: white;
-    margin-bottom: 20px; /* Adds space between sections */
-    padding: 20px;
-}
-/* Media Query for mobile devices */
-@media (max-width: 768px) {
-    nav {
-        flex-direction: column; /* Stacks the flex items vertically */
-        align-items: center;    /* Centers the items on the cross-axis */
-    }
 }
